adding code for complementary functions of EditClassroomActivity

--- a/app/src/main/res/menu/menu_edit.xml
+++ b/app/src/main/res/menu/menu_edit.xml
@@ -7,4 +7,10 @@
         app:showAsAction="always"
         android:title=""
         />
+<!--    <item-->
+<!--        android:id="@+id/action_back"-->
+<!--        android:icon="@drawable/ic_about"-->
+<!--        android:title=""-->
+<!--        app:showAsAction="always"-->
+<!--        />-->
 </menu>
