--- a/app/src/main/res/layout/activity_edit_classroom.xml
+++ b/app/src/main/res/layout/activity_edit_classroom.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditClassroomActivity">
+    tools:context=".EditClassroomActivity"
+    android:orientation="vertical">
 
-<include layout="@layout/content_edit_classroom" />
-</android.support.constraint.ConstraintLayout>
+    <include layout="@layout/content_edit_classroom" />
+</LinearLayout>
