--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="75dp"
         android:layout_marginTop="56dp"
         android:layout_marginEnd="75dp"
-        android:drawableLeft="@drawable/ic_action_user"
+        android:drawableLeft="@drawable/ic_user_action"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
@@ -42,7 +42,7 @@
         android:layout_marginStart="75dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="75dp"
-        android:drawableLeft="@drawable/ic_action_password"
+        android:drawableLeft="@drawable/ic_password_action"
         android:ems="10"
         android:inputType="textPassword"
         android:minHeight="48dp"
@@ -60,7 +60,7 @@
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="128dp"
         android:text="Login"
-        android:background="@drawable/round_button"
+        android:background="@drawable/round_button_format"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
