--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,11 +17,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bottom_navigation"
-        app:mbn_circleColor="@color/white"
-        app:mbn_selectedIconColor="#3c415e"
+
+        app:mbn_circleColor="@color/gray_blue"
+        app:mbn_selectedIconColor="@color/light_orange"
         app:mbn_countTextColor="@color/white"
-        app:mbn_countBackgroundColor="#ff6f00"
-        app:mbn_defaultIconColor="@color/white"
-        app:mbn_backgroundBottomColor="#3c415e" />
+        app:mbn_countBackgroundColor="@color/purple_200"
+        app:mbn_defaultIconColor="@color/light_brown"
+        app:mbn_backgroundBottomColor="@color/dark_blue"/>
 
 </LinearLayout>
