--- a/app/src/main/res/layout/content_classrooms_list.xml
+++ b/app/src/main/res/layout/content_classrooms_list.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_vertical_padding"
     android:paddingRight="@dimen/activity_vertical_padding"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ClassroomListFragment"
+    tools:context=".ClassroomsListFragment"
     tools:showIn="@layout/fragment_classroom_list">
 
     <TextView
@@ -19,92 +19,68 @@
         android:gravity="center_horizontal"
         android:text="@string/danhsachlop"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/teal_700" />
+        android:textColor="@color/dark_blue" />
 
     <LinearLayout
         android:id="@+id/ll_row_title_class"
+        android:weightSum="13.5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvTitleClass"
         android:orientation="horizontal">
 
         <TextView
-            android:layout_width="@dimen/width_small_column"
+            android:layout_weight="1.5"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:gravity="center_horizontal"
             android:paddingBottom="@dimen/activity_vertical_padding"
             android:paddingTop="@dimen/activity_vertical_padding"
-            android:text="STT"
-            android:textColor="@color/teal_700" />
-
+            android:text="@string/order_num"
+            android:textColor="@color/dark_blue" />
         <TextView
-            android:layout_width="@dimen/divider_height"
+            android:layout_weight="2.5"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/activity_vertical_padding"
-            android:paddingTop="@dimen/activity_vertical_padding" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:background="@color/white"
             android:gravity="center_horizontal"
             android:paddingBottom="@dimen/activity_vertical_padding"
             android:paddingTop="@dimen/activity_vertical_padding"
             android:text="@string/malop"
-            android:textColor="@color/teal_700" />
+            android:textColor="@color/dark_blue" />
+
 
         <TextView
-            android:layout_width="@dimen/divider_height"
+            android:layout_weight="3.5"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/activity_vertical_padding"
-            android:paddingTop="@dimen/activity_vertical_padding" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:background="@color/white"
             android:gravity="center_horizontal"
             android:paddingBottom="@dimen/activity_vertical_padding"
             android:paddingTop="@dimen/activity_vertical_padding"
             android:text="@string/tenlop"
-            android:textColor="@color/teal_700" />
-
+            android:textColor="@color/dark_blue" />
         <TextView
-            android:layout_width="@dimen/divider_height"
+            android:layout_weight="3"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/activity_vertical_padding"
-            android:paddingTop="@dimen/activity_vertical_padding" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:background="@color/white"
             android:gravity="center_horizontal"
             android:paddingBottom="@dimen/activity_vertical_padding"
             android:paddingTop="@dimen/activity_vertical_padding"
             android:text="@string/thoigian"
-            android:textColor="@color/teal_700" />
-
+            android:textColor="@color/dark_blue" />
         <TextView
-            android:layout_width="@dimen/divider_height"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="80dp"
+            android:layout_weight="3"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:gravity="center_horizontal"
             android:paddingBottom="@dimen/activity_vertical_padding"
-            android:paddingLeft="@dimen/activity_horizontal_padding"
-            android:paddingRight="@dimen/activity_horizontal_padding"
             android:paddingTop="@dimen/activity_vertical_padding"
             android:text="@string/phonghoc"
-            android:textColor="@color/teal_700" />
-
+            android:textColor="@color/dark_blue" />
     </LinearLayout>
 
     <ListView
