--- a/app/src/main/res/layout/student_row.xml
+++ b/app/src/main/res/layout/student_row.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:weightSum="13.5"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_weight="12"
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/tvOrderClass"
+        android:id="@+id/tvOrderStudent"
         android:layout_weight="1.5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -17,48 +17,47 @@
         android:textColor="@color/dark_blue"
         android:gravity="center_horizontal"/>
 
+
     <TextView
-        android:id="@+id/tvIdClass"
+        android:id="@+id/tvIdStudent"
         android:layout_weight="2.5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/malop"
+        android:text="@string/masv"
         android:textColor="@color/dark_blue"
         android:gravity="center_horizontal"
         android:paddingTop="@dimen/activity_vertical_padding"
         android:paddingBottom="@dimen/activity_vertical_padding"/>
 
     <TextView
-        android:id="@+id/tvNameClass"
+        android:id="@+id/tvNameStudent"
         android:layout_weight="3.5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/activity_vertical_padding"
         android:paddingBottom="@dimen/activity_vertical_padding"
-        android:text="@string/tenlop"
+        android:text="@string/tensv"
         android:textColor="@color/dark_blue"
         android:gravity="center_horizontal"/>
 
     <TextView
-        android:id="@+id/tvTimeClass"
+        android:id="@+id/tvBirthdayStudent"
         android:layout_weight="3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/activity_vertical_padding"
         android:paddingBottom="@dimen/activity_vertical_padding"
-        android:text="@string/thoigian"
+        android:text="@string/ngaysinh"
         android:textColor="@color/dark_blue"
         android:gravity="center_horizontal"/>
 
-    <TextView
-        android:id="@+id/tvRoomClass"
-        android:layout_weight="3"
+    <ImageView
+        android:id="@+id/ivGenderStudent"
+        android:layout_weight="1.5"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingTop="@dimen/activity_vertical_padding"
         android:paddingBottom="@dimen/activity_vertical_padding"
-        android:text="@string/phonghoc"
-        android:textColor="@color/dark_blue"
-        android:gravity="center_horizontal"/>
+        android:src="@mipmap/ic_male_student" />
 
 </LinearLayout>
