updating readme.md: complete the basic functionality of the app

--- a/app/src/main/res/layout/content_classrooms_list.xml
+++ b/app/src/main/res/layout/content_classrooms_list.xml
@@ -96,5 +96,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_adding_action" />
+        android:background="@drawable/circle_button_format"
+        android:src="@drawable/ic_rounded_add" />
 </RelativeLayout>
