--- a/app/src/main/res/layout/content_edit_classroom.xml
+++ b/app/src/main/res/layout/content_edit_classroom.xml
@@ -138,6 +138,33 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Weekday"
+                android:textColor="@color/dark_blue"
+                android:paddingTop="@dimen/activity_horizontal_padding"/>
+
+
+            <EditText
+                android:id="@+id/etWeekDay"
+                android:layout_width="207dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="none"
+                android:focusable="false"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:hint="Choose weekday"
+                android:textColorHint="@color/dark_blue" />
+
+        </TableRow>
+
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:textColor="@color/dark_blue"
                 android:text="@string/phonghoc"
                 android:paddingTop="@dimen/activity_horizontal_padding"/>
