--- a/app/src/main/res/layout/content_edit_classroom.xml
+++ b/app/src/main/res/layout/content_edit_classroom.xml
@@ -82,7 +82,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/giobatdau"
+                android:text="Starting Time"
                 android:textColor="@color/dark_blue"
                 android:paddingTop="@dimen/activity_horizontal_padding"/>
 
@@ -213,34 +213,6 @@
 
         </TableRow>
 
-<!--        <TableRow-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-
-<!--            android:padding="@dimen/activity_horizontal_padding">-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                >-->
-<!--                <Button-->
-<!--                    android:id="@+id/btnThongBao"-->
-<!--                    android:background="@color/teal_700"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:textColor="@color/teal_700"-->
-<!--                    android:onClick="navigateToEmail"-->
-<!--                    android:text="@string/thong_bao"-->
-<!--                    android:layout_weight="1"-->
-<!--                    />-->
-<!--                <TextView-->
-<!--                    android:layout_width="@dimen/activity_horizontal_padding"-->
-<!--                    android:layout_height="wrap_content" />-->
-<!--            </LinearLayout>-->
-
-
-
-<!--        </TableRow>-->
     </TableLayout>
 
 </RelativeLayout>
