--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -72,7 +72,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/infoUser"
-        android:layout_width="308dp"
+        android:layout_width="325dp"
         android:layout_height="62dp"
         android:background="@drawable/border"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -94,7 +94,7 @@
 
         <TextView
             android:id="@+id/etName"
-            android:layout_width="204dp"
+            android:layout_width="221dp"
             android:layout_height="31dp"
             android:gravity="center"
             android:text="TextViewaaaaaaaaa"
@@ -107,7 +107,7 @@
 
         <TextView
             android:id="@+id/etEmail"
-            android:layout_width="204dp"
+            android:layout_width="221dp"
             android:layout_height="31dp"
             android:layout_marginEnd="40dp"
             android:gravity="center"
@@ -126,6 +126,7 @@
             android:src="@drawable/ic_baseline_exit_to_app_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/etName"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.538" />
 
