fixing the func to randomly call a student in a classroom

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,7 +8,7 @@
         android:title=""
         app:showAsAction="always" />
     <item
-        android:id="@+id/attendance"
+        android:id="@+id/random_action"
         android:icon="@mipmap/ic_goingaunhien_foreground"
         android:title=""
         app:showAsAction="always" />
